src/kubernetes/krm/kind/keycloak-quickstart-2/keycloak-ingress-p1gen6-hyperv-b.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
spec:
  tls:
    - hosts:
        - local
  rules:
    - host: local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
